Bug 295397 - Bad charset / encoding result of signing clipboard with utf-8 text but non-english text.
Summary: Bad charset / encoding result of signing clipboard with utf-8 text but non-en...
Status: RESOLVED FIXED
Alias: None
Product: kgpg
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Debian stable Linux
: NOR major
Target Milestone: ---
Assignee: Rolf Eike Beer
URL:
Keywords:
: 312126 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-03-06 01:57 UTC by wocanltofnetrisz
Modified: 2012-12-23 17:44 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description wocanltofnetrisz 2012-03-06 01:57:45 UTC
Bad charset / encoding result of signing clipboard with utf-8 text but non-english text.
I have a written text in eastern european language in Kate but coding is in utf-8. When copying to clipboard and wanna sign the message, text is not the same but instead some letters there are just question marks "?".
When signing a txt file, the same problem. 
Only if I crypt and then decrypt the txt file (with the same text as mentioned above), decryption is ok.
Am I wrong or can I set anything anywhere ?
~$ gpg --version
  gpg (GnuPG) 1.4.10
Copyright (C) 2008 Free Software Foundation, Inc.
License GPLv3+: GNU GPL version 3 or later <http://gnu.org/licenses/gpl.html>
This is free software: you are free to change and redistribute it.
There is NO WARRANTY, to the extent permitted by law.

Home: ~/.gnupg
Supported algorithms:
Pubkey: RSA, RSA-E, RSA-S, ELG-E, DSA
Cipher: 3DES, CAST5, BLOWFISH, AES, AES192, AES256, TWOFISH, CAMELLIA128, 
        CAMELLIA192, CAMELLIA256
Hash: MD5, SHA1, RIPEMD160, SHA256, SHA384, SHA512, SHA224
Compression: Uncompressed, ZIP, ZLIB, BZIP2

~$ set | grep -e LANG -e ^LC
LANG=en_US.UTF-8
LANGUAGE=en_US:en

KGpg ver.: 2.3.0 Using KDE Development Platform 4.4.5 (KDE 4.4.5)
OS: Linux (i686) release 2.6.32-5-686 ...Debian Squeeze
Compiler: cc

Can anybody help, please ? Thanks in advance !
Comment 1 wocanltofnetrisz 2012-03-06 02:38:20 UTC
Just a while ago (but already after posting this bug report), I've installed "GPA ver. 0.9.0-1", another gnuPG front-end and I've tested the same task - to sign clipboard with non-english text/letters.
And the signed text is OK ! :) 
Those non-english letters are the same as original, therefore I do suppose there must be  unfortunately something wrong with the "KGpg" app :-\
Comment 2 Rolf Eike Beer 2012-03-06 08:02:57 UTC
I have already fixed some of these bugs. Please try again with a recent version.
Comment 3 wocanltofnetrisz 2012-03-06 09:46:13 UTC
Hello,

thanks for information.
Can you please give me little advice how to install the newest version of KGpg into Debian Squeeze (stable) ? :)
Due it's stable most apps won't change, some apps, like Iceweasel I've upgraded just adding backports to my sources.list and installing with a switch "-t ...", no other way.
Thanks in advance!
Comment 4 Rolf Eike Beer 2012-03-06 23:01:56 UTC
Sorry, I have no idea about Debian. Try asking in the KDE forums.
Comment 5 Rolf Eike Beer 2012-03-07 09:14:55 UTC
Ok, I found some more bugs in it. Fixes will go into master soon and
things will likely get fixed for KDE SC 4.8.2.
Comment 6 Rolf Eike Beer 2012-03-07 18:58:45 UTC
Git commit fa5e306040bb977f38da6732d6a10330ed10d6b4 by Rolf Eike Beer.
Committed on 07/03/2012 at 19:39.
Pushed by dakon into branch 'KDE/4.8'.

make operations on UTF-8 text in editor work

Signing, verifying, and encrypting were previously broken. This will very
likely break any text that is not UTF-8 encoded, but I doubt that the editor
can currently handle that anyway.

M  +3    -23   editor/kgpgtextedit.cpp
M  +0    -3    editor/kgpgtextedit.h
M  +11   -19   kgpgtextinterface.cpp
M  +1    -1    transactions/kgpgtextorfiletransaction.cpp

http://commits.kde.org/kgpg/fa5e306040bb977f38da6732d6a10330ed10d6b4
Comment 7 Rolf Eike Beer 2012-12-23 17:44:34 UTC
*** Bug 312126 has been marked as a duplicate of this bug. ***