make operations on UTF-8 text in editor work

Signing, verifying, and encrypting were previously broken. This will very
likely break any text that is not UTF-8 encoded, but I doubt that the editor
can currently handle that anyway.

BUG:295397