editor/kgpgtextedit.cpp
@@ -16,7 +16,6 @@
 
 #include <QDragEnterEvent>
 #include <QTextStream>
-#include <QTextCodec>
 #include <QDropEvent>
 #include <QFile>
 
@@ -245,15 +244,6 @@ void KgpgTextEdit::slotVerify(const QString &message)
     interface->verifyText(message.mid(posstart, posend - posstart));
 }
 
-bool KgpgTextEdit::checkForUtf8(const QString &text)
-{
-    // try to guess if the decrypted text uses utf-8 encoding
-    QTextCodec *codec = QTextCodec::codecForLocale();
-    if (!codec->canEncode(text))
-        return true;
-    return false;
-}
-
 void KgpgTextEdit::slotDecryptDone(int result)
 {
 	KGpgDecrypt *decr = qobject_cast<KGpgDecrypt *>(sender());
@@ -265,9 +255,7 @@ void KgpgTextEdit::slotDecryptDone(int result)
 	}
 
 	if (result == KGpgTransaction::TS_OK) {
-#ifdef __GNUC__
-#warning FIXME choose codec
-#endif
+		// FIXME choose codec
 		setPlainText(decr->decryptedText().join(QLatin1String("\n")) + QLatin1Char('\n'));
 	} else if (result != KGpgTransaction::TS_USER_ABORTED) {
 		KMessageBox::detailedSorry(this, i18n("Decryption failed."), decr->getMessages().join( QLatin1String( "\n" )));
@@ -301,16 +289,8 @@ void KgpgTextEdit::slotSignUpdate(const QString &content)
         return;
     }
 
-    if (checkForUtf8(content))
-    {
-        setPlainText(QString::fromUtf8(content.toAscii()));
-        emit resetEncoding(true);
-    }
-    else
-    {
-        setPlainText(content);
-        emit resetEncoding(false);
-    }
+    setPlainText(content);
+    emit resetEncoding(false);
 }
 
 void KgpgTextEdit::slotVerifySuccess(const QString &content, const QString &log)
